--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^7.14.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.0",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "newsapi": "^2.4.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
